crates/test-files/fixtures/compile_errors/bad_tuple_attr3.fe
// See ethereum/fe issue //470
contract foo {
    my_sto_tuple: (u256, i32)

    pub fn bar(self) {
        self.my_sto_tuple.item00
    }
}
